Adição de jwt e upload de imagens no Swagger
Agora faltar fazer a função update_dog_list funcionar no Swagger.
